; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/libs/vgfont/extr_graphics.c_gx_destroy_paint.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/libs/vgfont/extr_graphics.c_gx_destroy_paint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gx_destroy_paint(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = ptrtoint i32* %7 to i32
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @gx_priv_save(i32* %5, i32 %9)
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @vgDestroyPaint(i32 %11)
  %13 = call i32 @gx_priv_restore(i32* %5)
  ret void
}

declare dso_local i32 @gx_priv_save(i32*, i32) #1

declare dso_local i32 @vgDestroyPaint(i32) #1

declare dso_local i32 @gx_priv_restore(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
